# pycoreutils

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PUBLISHING.md  README.md  pycat.py  pyecho.py  pyhead.py  pyls.py  pynl.py  pyproject.toml  pytail.py  pywc.py  setup.cfg
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: demo.py  log_analysis.py
pycoreutils/: __init__.py  archive_utils.py  file_ops.py  path_utils.py  process_utils.py  text_utils.py
pycoreux/: __init__.py  archive_utils.py  file_ops.py  path_utils.py  process_utils.py  text_utils.py
scripts/: pycoreutils_cli.py  pycoreux_cli.py
tests/: test_pycoreutils.py  test_pycoreux.py
